@@ -1,0 +1,16 @@
+#!/usr/bin/env perl
+
+use warnings;
+use strict;
+
+use Data::Dumper;
+use RPi::WiringPi;
+
+my $pi = RPi::WiringPi->new(fatal_exit => 0);
+
+$pi->clean_shared;
+
+my $meta = $pi->metadata;
+
+print Dumper $meta;
+
