@@ -1,0 +1,14 @@
+#!/usr/bin/env perl
+
+use warnings;
+use strict;
+
+use Data::Dumper;
+use RPi::WiringPi;
+
+my $pi = RPi::WiringPi->new;
+
+my $meta = $pi->metadata;
+
+print Dumper $meta;
+
