@@ -13,6 +13,10 @@ Revision history for Perl extension RPi::WiringPi.
           what purpose (closes #108)
         - added new metadata() in Core, returns a copy of the meta data stored
           within the shared memory space
+        - added clean_shared() in Core, with examples/metadata/pl. Used to
+          wipe out the shared metadata in the event of power loss while Pi is
+          running
+        - added pimetadata and pi-erase-metadata scripts
 
 2.3632  2019-06-22
         - added the digital potentiometer (MCP4xxxx) to the test platform (in
